Fixing contrast bug

--- a/source/stylesheets/wai-act.scss
+++ b/source/stylesheets/wai-act.scss
@@ -463,7 +463,8 @@ a {
 		text-transform: uppercase;
 	}
 	.current-a .status {
-		background-color: #aaa;
+		background-color: #666;
+		color: #fff;
 	}
 	ul {
 		background-color: #ddd;
